--- a/assets/styles/estilos_pesquera.css
+++ b/assets/styles/estilos_pesquera.css
@@ -1,4 +1,4 @@
-body{ background-color:black;
+body{ background-color:rgb(97, 96, 96);
 }
 article{ color:rgb(255, 255, 255);padding: 1.5rem;
     border-bottom: #FFFFFF 1px solid;
