--- a/assets/styles/estilos_pesquera.css
+++ b/assets/styles/estilos_pesquera.css
@@ -66,3 +66,11 @@ section>footer {
     /* esta sección se extenderá 12 columnas. */
     grid-column: span 12;
 }
+
+nav > ul {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border-bottom: 1px solid #fff;
+    padding-bottom: 0.5rem;
+}
