--- a/assets/styles/estilos_pesquera.css
+++ b/assets/styles/estilos_pesquera.css
@@ -67,6 +67,10 @@ nav> ul{
     padding-bottom: 0.5rem;
 }
 nav>ul>li>a{
+    text-decoration: none;
+    color: white;
+}
+nav>ul>li>a:hover{
     text-decoration: underline;
     color: greenyellow;
 }
