--- a/assets/styles/estilos_pesquera.css
+++ b/assets/styles/estilos_pesquera.css
@@ -1,9 +1,10 @@
 body {
     background-color: black;
     color: white;
+    margin: 0;
 }
 p{
-    color:rgb(179, 255, 0);
+    color:rgb(115, 255, 0);
     font-size:medium;
     text-align:justify;
 }
@@ -12,7 +13,7 @@ h2{
     color: white;
 }
 article{
-    background-color: rgb(red, green, blue);
+    background-color: rgb(rgb(0, 255, 64), rgb(128, 0, 43), blue);
     padding: 1.5rem;
     border-bottom: 1px solid #ffffff;
 }
@@ -25,6 +26,7 @@ nav>ul>li>a {
 }
 .titulo_del_blog{ text-align: center; 
 font-size: 3rem; 
+
 }
 #footerblog{
     margin: 2rem;
@@ -47,30 +49,50 @@ section{
 section>header {
     grid-column: span 12
 }
+main{
+grid-column: span 12;
+}
+@media (min-width: 1024.1px){
 section>main {
     grid-column: span 8;
 }
+        }
+aside{
+    grid-column: span 12;
+}
+  @media (min-width: 1024.1px){
 section>aside {
     grid-column: span 4;
 }
+         }
 section>footer {
     grid-column: span 12;
 }
 nav{
     font-size: 1.3rem;
+    position: fixed;
+    background-color: black;
+    width: 100%;
 }
-nav> ul{
+nav>ul{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-auto-flow: auto;
+    gap: 1rem;
+    border-bottom: 1px solid #fff;
+    padding-bottom: 1.5rem;
+}
+@media (min-width: 1100px) {
+    nav> ul{
     display: flex;
     align-items: center;
     justify-content: space-around;
     border-bottom: 1px solid  #fff;
     padding-bottom: 0.5rem;
-}
+
+}      }
+         
 nav>ul>li>a{
-    text-decoration: none;
-    color: white;
-}
-nav>ul>li>a:hover{
     text-decoration: underline;
     color: greenyellow;
 }
@@ -109,5 +131,10 @@ aside>h2{
     font-size: 1.3rem;
 }
 aside>div:nth-child(odd){
-    background-color: rgb(44, 43, 43);
+    background-color: rgb(12, 12, 12);
 }
+@media (min-width: 1024.1px)(max-width: 13241024.1px) {
+aside>div{
+    flex-direction: column;
+}
+        }
